--- a/Bookstore/Bookstore/pom.xml
+++ b/Bookstore/Bookstore/pom.xml
@@ -40,6 +40,11 @@
 			<scope>runtime</scope>
 		</dependency>
 
+        <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-rest</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
